wordpress-template/mysql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    run: wordpressdb
  name: wordpressdb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: wordpressdb
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: wordpressdb
    spec:
      containers:
        - image: mysql:latest
          name: wordpressdb
          ports:
            - containerPort: 80
              name: wordpressdb
          volumeMounts:
            - name: wordpressdb
              mountPath: /var/lib/mysql
      volumes:
        - hostPath:
              path: /mnt/kube/wordpress-template/db
          name: wordpressdb
