wordpress-template/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: wp
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
